--- a/HTML.2
+++ b/HTML.2
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -15,7 +15,10 @@
                 box-sizing: border-box;
                 align-items: center;
                 min-height: 100vh;
-                background: url(spaceSea.jpg) no-repeat center center/cover;
+                background-image: url('sky.jpg');
+                background-position: center;
+                background-size: cover;
+                background-repeat: no-repeat;
             }
             .wrapper {
               width: 400px;
