--- a/HTML8.2
+++ b/HTML8.2
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <head>
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -84,22 +85,22 @@
             <p>PROGRAMMER</p>
         </div>
         <div class="box-2">
-            <h2>ABOUT ME <i class="material-icons3" style="font-size: 28px!important;"></i></h2>
+            <h2>ABOUT ME <i class="fa fa-user" aria-hidden="true"></i></h2>
             <p class="p2">
-                Hello! My name is Pond, a computer engineering student with a passion for creating amazing and innovative digital worlds. I am a passionate gamer and have dreamed of creating my own games since I was a child.
- Creating games and writing websites This is what I want to make true. And through my experiences, I have created simple games to have fun with friends and capture the feeling of basic coding. It was an effective learning experience for me.
- I have a firm command of programming languages ​​such as Python, JavaScript, and HTML/CSS and can use my knowledge to create and develop interesting games and websites. I believe that programming is not just a skill. It is the art of creating and expressing the thoughts and creativity of the writer.
+                Hello! My name is Pond, a computer engineering student with a passion for creating amazing and innovative digital worlds. I am a passionate gamer and have dreamed of creating my own games since I was a child.<br>
+ Creating games and writing websites This is what I want to make true. And through my experiences, I have created simple games to have fun with friends and capture the feeling of basic coding. It was an effective learning experience for me.<br>
+ I have a firm command of programming languages ​​such as Python, JavaScript, and HTML/CSS and can use my knowledge to create and develop interesting games and websites. I believe that programming is not just a skill. It is the art of creating and expressing the thoughts and creativity of the writer.<br>
  Thank you for reading my “About Me”, I hope we will get to know each other better in the future!
             </p>
         </div>
     <div class="box-2">
-        <h2>EDUCATION <i class="material-icons3"></i></h2>
+        <h2>EDUCATION <i class="fa fa-book" aria-hidden="true"></i></h2>
         <p class="p3">2022-current<span>Rajamangala University of Technology Thanyaburi</span></p>
         <p class="p3">2016-2022<span>Nawamintrachinuthit Benjamarachalai School</span></p>
         <p class="p3">2008-2016<span>Watpantong School</span></p>
     </div>
     <div class="box-2">
-        <h2>WORK EXPERIENCE <i class="material-icons3"></i></h2>
+        <h2>WORK EXPERIENCE <i class="fa fa-folder-o" aria-hidden="true"></i></h2>
         <p class="p3">2023<span>Riot Games | 3 months</span></p>
         <p class="p3">2022<span>Netmable | 2 months</span></p>
     </div>
